[gd_scene load_steps=16 format=3 uid="uid://cddfqrv2jwgo8"]

[ext_resource type="Script" uid="uid://gdss8bwekgbq" path="res://worlds/free_for_all/ffa_pregame_menu.gd" id="1_4rr4b"]
[ext_resource type="FontFile" uid="uid://c2f72s2s2idlj" path="res://art/open_sans/static/OpenSans-ExtraBold.ttf" id="1_i85rw"]
[ext_resource type="FontFile" uid="uid://c0etogfs31a3a" path="res://art/open_sans/static/OpenSans-Bold.ttf" id="1_ldet6"]
[ext_resource type="PackedScene" uid="uid://c0wpedxn5d6fg" path="res://player/player_tank.tscn" id="2_x18rp"]
[ext_resource type="ArrayMesh" uid="uid://bxftdiq8idtoj" path="res://art/sweep_Sweep.res" id="3_h1kcm"]
[ext_resource type="PackedScene" uid="uid://dros5vd5m6ufl" path="res://player/menu_cursor.tscn" id="4_h1kcm"]
[ext_resource type="PackedScene" uid="uid://dtvf77eetgnbh" path="res://ui/loadout_picker.tscn" id="4_wutr7"]

[sub_resource type="FontVariation" id="FontVariation_4rr4b"]
base_font = ExtResource("1_i85rw")
spacing_glyph = 2

[sub_resource type="FontVariation" id="FontVariation_4nvqn"]
base_font = ExtResource("1_i85rw")
spacing_glyph = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uv4rg"]
bg_color = Color(1, 0.584314, 0, 1)
border_width_top = 8
border_color = Color(0.258824, 0.258824, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4rr4b"]
bg_color = Color(0, 0.423529, 0.917647, 1)
border_width_top = 8
border_color = Color(0.258824, 0.258824, 0.258824, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wutr7"]
albedo_color = Color(1, 0.351563, 0, 1)
roughness = 0.5

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_x18rp"]
sky_top_color = Color(0.225905, 0.458421, 1, 1)
sky_horizon_color = Color(0.565141, 0.709734, 1, 1)

[sub_resource type="Sky" id="Sky_csgli"]
sky_material = SubResource("ProceduralSkyMaterial_x18rp")

[sub_resource type="Environment" id="Environment_h1kcm"]
background_mode = 2
sky = SubResource("Sky_csgli")
ambient_light_color = Color(1, 1, 1, 1)
tonemap_mode = 2
ssao_enabled = true

[node name="FfaPregameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4rr4b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Splitter" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="GamemodeSettings" type="MarginContainer" parent="MarginContainer2/Splitter"]
process_mode = 4
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/Splitter/GamemodeSettings"]
layout_mode = 2

[node name="LeftPad" type="Control" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="GameModeSettings" type="VBoxContainer" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.584314, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_4rr4b")
theme_override_font_sizes/font_size = 64
text = "Free For All"
horizontal_alignment = 1

[node name="PlayerCountSettings" type="VBoxContainer" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ColorRect" type="ColorRect" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
color = Color(1, 0.584314, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelBg" type="ColorRect" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer/ColorRect/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerCountLbl" type="Label" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer/ColorRect/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = ExtResource("1_ldet6")
theme_override_font_sizes/font_size = 24
text = "Player Count"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer/ColorRect/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="PlayerCountValue" type="Label" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer/ColorRect/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = ExtResource("1_ldet6")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SubtPlayerCount" type="Button" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer" groups=["menu_control"]]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_neighbor_right = NodePath("../AddPlayerCount")
focus_neighbor_bottom = NodePath("../../../StartGame")
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = SubResource("FontVariation_4nvqn")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_uv4rg")
text = "<"

[node name="AddPlayerCount" type="Button" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer" groups=["menu_control"]]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_neighbor_left = NodePath("../SubtPlayerCount")
focus_neighbor_bottom = NodePath("../../../StartGame")
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = SubResource("FontVariation_4nvqn")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_uv4rg")
text = ">"

[node name="Spacer" type="Control" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_vertical = 3

[node name="StartGame" type="Button" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings" groups=["menu_control"]]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = SubResource("FontVariation_4nvqn")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_4rr4b")
text = "Start Game"

[node name="RightPad" type="Control" parent="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="SplitScreenContainer" type="VBoxContainer" parent="MarginContainer2/Splitter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopRow" type="HBoxContainer" parent="MarginContainer2/Splitter/SplitScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="P1Cont" type="MarginContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SvpCont1" type="SubViewportContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P1Cont"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P1Cont/SvpCont1"]
handle_input_locally = false
size = Vector2i(699, 538)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P1Cont/SvpCont1/SubViewport"]
transform = Transform3D(0.811574, 0.326708, -0.484365, 0, 0.829038, 0.559193, 0.58425, -0.453826, 0.672825, 7.51113, 4.42345, -7.0582)
current = true
fov = 39.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P1Cont/SvpCont1/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.128, 1, -0.80525)
material_override = SubResource("StandardMaterial3D_wutr7")
mesh = ExtResource("3_h1kcm")

[node name="Player1" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P1Cont/SvpCont1/SubViewport" instance=ExtResource("2_x18rp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, -10.5)
hide_gui_on_ready = true

[node name="Container" type="MarginContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P1Cont"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="LoadoutPicker1" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P1Cont/Container" instance=ExtResource("4_wutr7")]
layout_mode = 2
size_flags_vertical = 3

[node name="P2Cont" type="MarginContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SvpCont2" type="SubViewportContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P2Cont"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P2Cont/SvpCont2"]
handle_input_locally = false
size = Vector2i(699, 538)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P2Cont/SvpCont2/SubViewport"]
transform = Transform3D(-0.811574, -0.326708, 0.484365, 0, 0.829038, 0.559193, -0.58425, 0.453826, -0.672825, -7.51113, 4.42345, 7.0582)
current = true
fov = 39.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P2Cont/SvpCont2/SubViewport"]
transform = Transform3D(-1, 0, -2.62268e-07, 0, 1, 0, 2.62268e-07, 0, -1, -19.128, 1, 0.805253)
material_override = SubResource("StandardMaterial3D_wutr7")
mesh = ExtResource("3_h1kcm")

[node name="Player2" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P2Cont/SvpCont2/SubViewport" instance=ExtResource("2_x18rp")]
transform = Transform3D(-1, 0, -2.62268e-07, 0, 1, 0, 2.62268e-07, 0, -1, -10, 1, 10.5)
hide_gui_on_ready = true

[node name="Container" type="MarginContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P2Cont"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="LoadoutPicker2" parent="MarginContainer2/Splitter/SplitScreenContainer/TopRow/P2Cont/Container" instance=ExtResource("4_wutr7")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer2/Splitter/SplitScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPad" type="Control" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="P3Cont" type="MarginContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SvpCont3" type="SubViewportContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P3Cont"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P3Cont/SvpCont3"]
handle_input_locally = false
size = Vector2i(699, 538)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P3Cont/SvpCont3/SubViewport"]
transform = Transform3D(-0.58425, 0.453826, -0.672825, 0, 0.829038, 0.559193, 0.811574, 0.326708, -0.484365, 10.5582, 5.42345, 7.51113)
current = true
fov = 39.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P3Cont/SvpCont3/SubViewport"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 4.30525, 2, 19.128)
material_override = SubResource("StandardMaterial3D_wutr7")
mesh = ExtResource("3_h1kcm")

[node name="Player3" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P3Cont/SvpCont3/SubViewport" instance=ExtResource("2_x18rp")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 14, 2, 10)
hide_gui_on_ready = true

[node name="Container" type="MarginContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P3Cont"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="LoadoutPicker3" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P3Cont/Container" instance=ExtResource("4_wutr7")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="P4Cont" type="MarginContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SvpCont4" type="SubViewportContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P4Cont"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P4Cont/SvpCont4"]
handle_input_locally = false
size = Vector2i(699, 538)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P4Cont/SvpCont4/SubViewport"]
transform = Transform3D(0.58425, -0.453826, 0.672825, 0, 0.829038, 0.559193, -0.811574, -0.326708, 0.484365, -10.5582, 5.42345, -8.51113)
current = true
fov = 39.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P4Cont/SvpCont4/SubViewport"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.30525, 2, -20.128)
material_override = SubResource("StandardMaterial3D_wutr7")
mesh = ExtResource("3_h1kcm")

[node name="Player4" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P4Cont/SvpCont4/SubViewport" instance=ExtResource("2_x18rp")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -14, 2, -11)
hide_gui_on_ready = true

[node name="Container" type="MarginContainer" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P4Cont"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="LoadoutPicker4" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow/P4Cont/Container" instance=ExtResource("4_wutr7")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightPad" type="Control" parent="MarginContainer2/Splitter/SplitScreenContainer/BottomRow"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Env"]
environment = SubResource("Environment_h1kcm")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Env"]
transform = Transform3D(0.989631, -0.0858755, 0.115131, -3.32875e-08, 0.801577, 0.597891, -0.143631, -0.591692, 0.793266, 0, 12, 0)
shadow_enabled = true

[node name="Level" type="Node3D" parent="."]

[node name="GlobalPivot" type="Node3D" parent="Level"]

[node name="InputTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="MenuCursor" parent="." instance=ExtResource("4_h1kcm")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 784.0
offset_top = 196.0
offset_right = 896.0
offset_bottom = 308.0
grow_horizontal = 1
grow_vertical = 1
colorize = Color(1, 0, 0.304688, 1)
label_text = "P1"

[node name="MenuCursor2" parent="." instance=ExtResource("4_h1kcm")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1537.0
offset_top = 193.0
offset_right = 1649.0
offset_bottom = 305.0
grow_horizontal = 1
grow_vertical = 1
colorize = Color(1, 0.210938, 0, 1)
label_text = "P2"

[node name="MenuCursor3" parent="." instance=ExtResource("4_h1kcm")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 805.0
offset_top = 737.0
offset_right = 917.0
offset_bottom = 849.0
grow_horizontal = 1
grow_vertical = 1
colorize = Color(0, 1, 0.25, 1)
label_text = "P3"

[node name="MenuCursor4" parent="." instance=ExtResource("4_h1kcm")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1540.0
offset_top = 735.0
offset_right = 1652.0
offset_bottom = 847.0
grow_horizontal = 1
grow_vertical = 1
colorize = Color(1, 0.703125, 0, 1)
label_text = "P4"

[connection signal="pressed" from="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer/SubtPlayerCount" to="." method="_on_subt_player_count_pressed"]
[connection signal="pressed" from="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/PlayerCountSettings/HBoxContainer/AddPlayerCount" to="." method="_on_add_player_count_pressed"]
[connection signal="pressed" from="MarginContainer2/Splitter/GamemodeSettings/HBoxContainer/GameModeSettings/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="timeout" from="InputTimer" to="." method="_on_input_timer_timeout"]
